@@ -5,6 +5,9 @@
 
  Changes between 0.9.1c and 0.9.2
 
+  *) Sort openssl functions by name.
+     [Ben Laurie]
+
   *) Get the gendsa program working (hopefully) and add it to app list. Remove
      encryption from sample DSA keys (in case anyone is interested the password
      was "1234").
